# RayTracingInVulkan

./: .gitignore  CMakeLists.txt  GPSnoopy-stats.ipynb  LICENSE  README.md  build_linux.sh  build_windows.bat  vcpkg_linux.sh  vcpkg_windows.bat
.github/workflows/: linux.yml  main.yml  windows.yml
assets/: CMakeLists.txt
assets/models/: Alex.mtl  Alex_high_res.mtl  cube.mtl  cube_multi.mtl
assets/shaders/: CookTorrance.glsl  Graphics.frag  Graphics.vert  Heatmap.glsl  Material.glsl  ProceduralHit.glsl  Random.glsl  RayPayload.glsl  RayTracing.Procedural.rchit  RayTracing.Procedural.rint  RayTracing.rchit  RayTracing.rgen  RayTracing.rmiss  Scatter.glsl  Tessellation.tesc  Tessellation.tese  UniformBufferObject.glsl  Vertex.glsl
assets/textures/: LICENSE.txt
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  ModelViewController.cpp  ModelViewController.hpp  Options.cpp  Options.hpp  RayTracer.cpp  RayTracer.hpp  SceneList.cpp  SceneList.hpp  UserInterface.cpp  UserInterface.hpp  UserSettings.hpp  main.cpp
src/Assets/: CornellBox.cpp  CornellBox.hpp  Icosphere.cpp  Icosphere.hpp  Material.hpp  Model.cpp  Model.hpp  Procedural.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Texture.cpp  Texture.hpp  TextureImage.cpp  TextureImage.hpp  UniformBuffer.cpp  UniformBuffer.hpp  Vertex.hpp
src/ImGui/: imgui_impl_glfw.cpp
src/Utilities/: Console.cpp  Console.hpp  Exception.hpp  Glm.hpp  StbImage.cpp  StbImage.hpp
src/Vulkan/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  BufferUtil.hpp  CommandBuffers.cpp  CommandBuffers.hpp  CommandPool.cpp  CommandPool.hpp  DebugUtils.cpp  DebugUtils.hpp  DebugUtilsMessenger.cpp  DebugUtilsMessenger.hpp  DepthBuffer.cpp  DepthBuffer.hpp  DescriptorBinding.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSetManager.cpp  DescriptorSetManager.hpp  DescriptorSets.cpp  DescriptorSets.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  Enumerate.hpp  Fence.cpp  Fence.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageMemoryBarrier.hpp  ImageView.cpp  ImageView.hpp  (+25 more)
src/Vulkan/RayTracing/: AccelerationStructure.cpp  AccelerationStructure.hpp  Application.cpp  Application.hpp  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.hpp  BottomLevelGeometry.cpp  BottomLevelGeometry.hpp  DeviceProcedures.cpp  DeviceProcedures.hpp  RayTracingPipeline.cpp  RayTracingPipeline.hpp  RayTracingProperties.cpp  RayTracingProperties.hpp  ShaderBindingTable.cpp  ShaderBindingTable.hpp  TopLevelAccelerationStructure.cpp  TopLevelAccelerationStructure.hpp
work/: .project  todo.txt  untitled.mtl
